<resources>
    <string name="app_name">Produtos perigosos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings para detalhes do aplicativo -->

    <string name="info">Este aplicativo foi baseado em:\n- Resolução n. 5.232/2016 da Agência Nacional de Transportes Terrestres (ANTT)\n- NBR n. 7500/2013 da Associação Brasileira de Normas Técnicas (ABNT)\n- Manual de Emergências da Autoridade Nacional de Proteção Civil de Portugal (ANPC)\n- Recomendações para o transporte de produtos perigosos da Organização das Nações Unidas\n- Manual de fiscalização do transporte rodoviário nacional e internacional de
produtos perigosos da ANTT de 2018\n- Guia de respostas a emergências do Departamento dos Transportes dos Estados Unidos (USDT) de 2016.</string>
    <string name="desenvolvedor">Versão: %1$s\n\nDesenvolvedor: Paulo E S Mesquita\nContato: mskapps.brazil@gmail.com</string>
    <string name="dica_sair">ATENÇÃO</string>
    <string name="dica_detalhe_classe">Detalhes da Classe</string>
    <string name="dica_produto">Detalhes do Produto</string>
    <string name="texto_sair">Você deseja fechar o aplicativo?</string>

    <!-- Strings para menu do navegador -->

    <string name="menu_rotulos">Rótulos e Painéis</string>
    <string name="menu_classes">Classes de Risco</string>
    <string name="menu_numeros">Números de Risco</string>
    <string name="menu_pesquisa">Relação de produtos</string>
    <string name="menu_infracoes">Códigos de infrações</string>
    <string name="menu_telefones">Telefones úteis</string>
    <string name="menu_info">Informações</string>
    <string name="menu_sobre">Sobre</string>

    <!-- Strings para tela inicial -->

    <string name="dica_app">LISTA DE PRODUTOS PERIGOSOS</string>
    <string name="dica_navegar">Para abrir o menu lateral, clique no ícone de navegação do canto superior esquerdo da tela ou deslize o dedo iniciando da borda esquerda para a direita da tela.</string>
    <string name="sobre">Baseado no Regulamento de Transporte Terrestre de Produtos Perigosos da ANTT, na NBR 7500 da ABNT, no Manual de Emergência da ANPC e nas Recomendações para transporte de produtos perigosos da ONU.</string>
    <string name="navegar">Opções de Navegação</string>

    <!-- Strings para pesquisa -->

    <string name="icone">icone</string>
    <string name="nr">X000</string>
    <string name="dica_pesquisa">Digite o nome ou número da ONU</string>
    <string name="dica_infracoes">Digite o código, amparo ou infração</string>
    <string name="dica_riscos">Digite o nome ou número de risco</string>

    <!-- Strings para detalhes do produto -->

    <string name="vazio">Nenhum item disponível</string>
    <string name="nr_risco">Número</string>
    <string name="nome_risco">Descrição do risco</string>
    <string name="info_risco">Informações e orientações</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="codigo_infracao">Código</string>
    <string name="nome_infracao">Amparo / Descrição</string>
    <string name="subclasses">Subclasses existentes</string>
    <string name="dica_nr_onu">Número da ONU: %1$s</string>
    <string name="dica_nome_produto">Nome do produto:</string>
    <string name="dica_nr_risco">Número de risco: %1$s</string>
    <string name="dica_nome_risco">Descrição do risco:</string>
    <string name="dica_nr_classe">Classe de risco: %1$s</string>
    <string name="dica_nome_classe">Descrição da classe:</string>
    <string name="dica_saude">Perigo à saúde:</string>
    <string name="dica_incendio">Perigo de incêndio:</string>
    <string name="dica_protecao">Nível de proteção:</string>
    <string name="dica_isolamento">Isolamento:</string>
    <string name="dica_evacuacao">Evacuação:</string>
    <string name="titulo_painel">SIMBOLOGIA DE RISCO</string>
    <string name="dica_painel">A identificação de riscos é constituída pela sinalização da unidade de transporte (rótulos de risco e painéis de segurança) e pela rotulagem das embalagens interna e externa (rótulos de risco, de segurança, especiais e símbolos de manuseio, quando aplicável).</string>
    <string name="dica_painel_1">O rótulo de risco é dividido em duas metades, sendo a metade superior do rótulo reservada para o símbolo de risco ou para o número das subclasses e a metade inferior para textos indicativos da natureza do risco, o número da classe ou subclasse e grupo de compatibilidade, quando apropriado.\nExistem ainda outros rótulos que devem utilizados para identificar outras situações de risco.</string>
    <string name="dica_painel_2">O painel de segurança comporta, conforme o caso, os números de identificação de risco (nº de risco) e do produto (nº ONU).\nQuando existem mais de um tipo de produtos sendo transportados, o painel utilizado não recebe números para indicar esta situação.</string>

    <!-- Strings de classes de produtos -->

    <string name="classe1">Classe 1 - Explosivos</string>
    <string name="sem_subclasse">Não possui subclasse</string>

    <!-- Strings para telefones úteis -->

    <string name="cenad">Centro Nacional de Gerenciamento\nde Riscos e Desastres\n Telefone: 0800 644 0199</string>
    <string name="sedec">Defesa Civil\n Telefone: 199</string>
    <string name="bombeiros">Corpo de Bombeiros Militar\n Telefone: 193</string>
    <string name="samu">SAMU\n Telefone: 192</string>
    <string name="prf">Polícia Rodoviária Federal\n Telefone: 191</string>
    <string name="policia">Polícia Militar\n Telefone: 190</string>
    <string name="antt">Agência Nacional de\nTransportes Terrestres\n Telefone: 166</string>

</resources>
