<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvNrONU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Amarelo"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dica_nr_onu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_nome_produto"
            android:textAppearance="?android:attr/textAppearance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/ivRotuloRisco"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/icone"
                android:src="@drawable/rotulo_explosivo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNrClasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/dica_nr_classe"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNomeClasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/dica_nome_classe"
                    android:textAppearance="?android:attr/textAppearance" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvNrRisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dica_nr_risco"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNomeRisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_nome_risco"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Amarelo"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/nome_risco"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPerigoSaude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_saude"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/tvPerigoIncendio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_incendio"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/tvNivelProtecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_protecao"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/tvIsolamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_isolamento"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/tvEvacuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dica_evacuacao"
            android:textAppearance="?android:attr/textAppearance" />

    </LinearLayout>

</ScrollView>
