<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/icone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Amarelo"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/titulo_painel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/dica_painel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/icone"
            android:src="@drawable/painel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Amarelo"
            android:gravity="center"
            android:padding="5dp"
            android:text="Painel de segurança"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/dica_painel_2"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/transporte_um_produto"
            android:contentDescription="@string/icone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Sinalização para transporte de um produto"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageView3"
            android:src="@drawable/transporte_dois_produtos"
            android:contentDescription="@string/icone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Sinalização para transporte de vários produtos"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Amarelo"
            android:gravity="center"
            android:padding="5dp"
            android:text="Rótulo de risco"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/dica_painel_1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/rotulo_animal_vivo"
                android:layout_weight="1"
                android:contentDescription="@string/icone"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/perecivel"
                android:layout_weight="1"
                android:contentDescription="@string/icone"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte de animais vivos"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte de perecíveis"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/rotulo_maritimo"
                android:layout_weight="1"
                android:contentDescription="@string/icone"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/rotulo_ferroviario"
                android:layout_weight="1"
                android:contentDescription="@string/icone"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte marítimo"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte ferroviário"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/rotulo_magnetizante"
                android:layout_weight="1"
                android:contentDescription="@string/icone"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/rotulo_temperatura"
                android:layout_weight="1"
                android:contentDescription="@string/icone"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte de materiais magnéticos"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sinalização para transporte de produtos aquecidos"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>